--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
                                 <h4>July 2018 - 2021</h4>
                                 <h4 class="subheading">It's Time For Change</h4>
                             </div>
-                            <div class="timeline-body"><p class="text-muted">Growing up with my kid, I picked up my intrested. Finished all graphic design major classes of Associate Degreed of Art from City College of San francisco, of course, including web and UX design. </p></div>
+                            <div class="timeline-body"><p class="text-muted">Growing up with my kid, I picked up my intrested of art and design. Finished all graphic design major classes of Associate Degreed of Art from City College of San francisco, of course, including web and UX design. </p></div>
                         </div>
                     </li>
                     <li class="timeline-inverted">
